js262/test/language/literals/regexp/named-groups/invalid-incomplete-groupname-without-group-2-u.js


/*---
description: GroupName is `< RegExpIdentifierName >`.
esid: prod-GroupName
negative:
  phase: parse
  type: SyntaxError
features: [regexp-named-groups]
---*/

$DONOTEVALUATE();

/\k<>/u;
